--- a/app/src/main/res/layout/fragment_a.xml
+++ b/app/src/main/res/layout/fragment_a.xml
@@ -9,6 +9,12 @@
         android:text="@string/go_to_b"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
+     <Button
+         android:layout_gravity="bottom|center_horizontal"
+         android:text="@string/go_to_argu"
+         android:id="@+id/go_to_arguments"
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content"/>
 <TextView
     android:text="@string/a"
     android:layout_width="wrap_content"
